Thêm vào file excel

--- a/Jupyter/buoi3/buoi3_btap.ipynb
+++ b/Jupyter/buoi3/buoi3_btap.ipynb
@@ -65,6 +65,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Tính điểm trung bình của từng học sinh."
    ]
@@ -362,6 +372,107 @@
     "print(students_df[students_df['Điểm Toán'] > 8])\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lưu vào file excel\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dữ liệu đã được ghi vào file students_analysis_complete.xlsx.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import random\n",
+    "from openpyxl import load_workbook\n",
+    "\n",
+    "# Danh sách dữ liệu\n",
+    "names = ['Hoa', 'Nam', 'Hai', 'Linh', 'Nhan', 'Phuong', 'Thu', 'Vu', 'Bao', 'Hieu', 'Lan', 'Duy', 'Tuan', 'Kien', 'Minh', 'Trung', 'Quyen', 'Tung', 'Hien', 'Mai']\n",
+    "genders = ['Nam', 'Nữ']\n",
+    "classes = ['10A1', '10A2', '11B1', '11B2', '12C1', '12C2']\n",
+    "\n",
+    "# Hàm tạo điểm ngẫu nhiên\n",
+    "def generate_scores():\n",
+    "    return [random.randint(5, 10) for _ in range(3)] \n",
+    "\n",
+    "# Dữ liệu cho DataFrame\n",
+    "data = {\n",
+    "    'Tên': names,\n",
+    "    'Giới tính': [random.choice(genders) for _ in names],\n",
+    "    'Điểm Toán': [score[0] for score in [generate_scores() for _ in names]],\n",
+    "    'Điểm Anh Văn': [score[1] for score in [generate_scores() for _ in names]],\n",
+    "    'Điểm Ngữ Văn': [score[2] for score in [generate_scores() for _ in names]],\n",
+    "    'Lớp': [random.choice(classes) for _ in names]\n",
+    "}\n",
+    "\n",
+    "students_df = pd.DataFrame(data)\n",
+    "\n",
+    "# Tính toán thêm\n",
+    "students_df['Điểm Trung Bình'] = students_df[['Điểm Toán', 'Điểm Anh Văn', 'Điểm Ngữ Văn']].mean(axis=1)\n",
+    "students_df['Tổng Điểm'] = students_df[['Điểm Toán', 'Điểm Anh Văn', 'Điểm Ngữ Văn']].sum(axis=1)\n",
+    "\n",
+    "# 1. Học sinh có điểm Toán cao nhất\n",
+    "max_math_score = students_df.loc[students_df['Điểm Toán'].idxmax()]\n",
+    "\n",
+    "# 2. Điểm trung bình môn Anh Văn của toàn lớp\n",
+    "avg_english_score = students_df['Điểm Anh Văn'].mean()\n",
+    "\n",
+    "# 3. Đếm số lượng học sinh nam và nữ\n",
+    "gender_counts = students_df['Giới tính'].value_counts()\n",
+    "\n",
+    "# 4. Lớp có điểm trung bình môn Ngữ Văn cao nhất\n",
+    "class_avg_vietnamese = students_df.groupby('Lớp')['Điểm Ngữ Văn'].mean().idxmax()\n",
+    "\n",
+    "# 5. Lọc học sinh có điểm Toán trên 8\n",
+    "math_above_8 = students_df[students_df['Điểm Toán'] > 8]\n",
+    "\n",
+    "# 6. Học sinh có điểm trung bình thấp nhất\n",
+    "min_avg_student = students_df.loc[students_df['Điểm Trung Bình'].idxmin()]\n",
+    "\n",
+    "# 7. Lớp có số lượng học sinh nhiều nhất\n",
+    "largest_class = students_df['Lớp'].value_counts().idxmax()\n",
+    "\n",
+    "# 8. Số học sinh lớp \"10A1\" có điểm Anh Văn > 7\n",
+    "english_above_7_10A1 = students_df[(students_df['Lớp'] == '10A1') & (students_df['Điểm Anh Văn'] > 7)].shape[0]\n",
+    "\n",
+    "# Ghi tất cả vào file Excel\n",
+    "file_name = 'students_analysis_complete.xlsx'\n",
+    "with pd.ExcelWriter(file_name, engine='openpyxl') as writer:\n",
+    "    # Ghi danh sách đầy đủ\n",
+    "    students_df.to_excel(writer, index=False, sheet_name='Danh sách học sinh')\n",
+    "    \n",
+    "    # Ghi các kết quả phân tích tóm tắt\n",
+    "    summary_data = {\n",
+    "        'Học sinh có điểm Toán cao nhất': [max_math_score['Tên']],\n",
+    "        'Điểm Toán cao nhất': [max_math_score['Điểm Toán']],\n",
+    "        'Điểm trung bình môn Anh Văn': [avg_english_score],\n",
+    "        'Số học sinh Nam': [gender_counts.get('Nam', 0)],\n",
+    "        'Số học sinh Nữ': [gender_counts.get('Nữ', 0)],\n",
+    "        'Lớp có điểm TB Ngữ Văn cao nhất': [class_avg_vietnamese],\n",
+    "        'Lớp có số lượng học sinh nhiều nhất': [largest_class],\n",
+    "        'Học sinh có điểm TB thấp nhất': [min_avg_student['Tên']],\n",
+    "        'Điểm TB thấp nhất': [min_avg_student['Điểm Trung Bình']],\n",
+    "        'Số học sinh lớp 10A1 có điểm Anh Văn > 7': [english_above_7_10A1]\n",
+    "    }\n",
+    "    pd.DataFrame(summary_data).to_excel(writer, index=False, sheet_name='Tóm tắt')\n",
+    "\n",
+    "    # Ghi danh sách học sinh có điểm Toán > 8\n",
+    "    math_above_8.to_excel(writer, index=False, sheet_name='Toán trên 8')\n",
+    "\n",
+    "print(f\"Dữ liệu đã được ghi vào file {file_name}.\")\n"
    ]
   }
  ],
